--- a/app/index.html
+++ b/app/index.html
@@ -42,10 +42,10 @@
             <div class="container">
                <div class="row col-md-12">
                   <span class="col-md-5 col-xs-5">
-                     <a class="link-senado" href="http://www.senado.gov.ar/" target="_blank"></a>
+                     <a href="http://www.senado.gov.ar/" target="_blank"></a>
                   </span>
                   <span class="col-md-5 col-xs-5">
-                     <a  class="link-diputados" href="http://www.diputados.gov.ar/" target="_blank"></a>
+                     <a  href="http://www.diputados.gov.ar/" target="_blank"></a>
                   </span>  
                </div>
             </div>
