--- a/app/index.html
+++ b/app/index.html
@@ -20,37 +20,49 @@
    <![endif]-->
 
    <!-- Add your site or application content here -->
-      <div class="container container-fluid">
+      
+      <header role="header">
          <nav class="navbar navbar-default" role="navigation">
-            <ul class="nav nav-pills pull-right">
-               <li >
-                  <a ui-sref="#/">Digesto</a>
-               </li>
-               <li >
-                  <a ui-sref="#/ley">Ley</a>
-               </li>
-               <li >
-                  <a ui-sref="#/consultas">Consultas</a>
-               </li>
-               <li >
-                  <a ui-sref="#/Normativa">Normativa</a>
-               </li>
-            </ul>
-         </nav>
-         <div ui-view=""></div>
-         <footer id="footer">
-            <div class="container">
-               <div class="row col-md-12">
-                  <span class="col-md-5 col-xs-5">
-                     <a href="http://www.senado.gov.ar/" target="_blank"></a>
-                  </span>
-                  <span class="col-md-5 col-xs-5">
-                     <a  href="http://www.diputados.gov.ar/" target="_blank"></a>
-                  </span>  
-               </div>
+            <div class="container-fluid">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+               </button>
+               <a class="navbar-brand" ui-sref="#/"><!-- aca va el logo del digesto --></a>
             </div>
-         </footer>
-      </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+               <ul class="nav navbar-nav">
+                  <li >
+                     <a ui-sref="#/">Digesto</a>
+                  </li>
+                  <li >
+                     <a ui-sref="#/ley">Ley</a>
+                  </li>
+                  <li >
+                     <a ui-sref="#/consultas">Consultas</a>
+                  </li>
+                  <li >
+                     <a ui-sref="#/normativa">Normativa</a>
+                  </li>
+               </ul>
+         </nav>
+      </header>
+      <div ui-view=""></div>
+      <footer id="footer">
+         <div class="container">
+            <div class="row col-md-12">
+               <span class="col-md-5 col-xs-5">
+                  <a href="http://www.senado.gov.ar/" target="_blank"></a>
+               </span>
+               <span class="col-md-5 col-xs-5">
+                  <a  href="http://www.diputados.gov.ar/" target="_blank"></a>
+               </span>  
+            </div>
+         </div>
+      </footer>
+   </div>
 
 
    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
