cambios en las rutas

--- a/app/index.html
+++ b/app/index.html
@@ -45,10 +45,10 @@
                         <a ui-sref="#/normativa" class="dropdown-toggle" data-toggle="dropdown">Buscar normas<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                            <li>
-                              <a iu-sref="#" id="icon-leg-vigente">Legislación vigente</a>
+                              <a iu-sref="#/normativa/vigente" id="icon-leg-vigente">Legislación vigente</a>
                            </li>
                            <li>
-                              <a ui-sref="#" id="icon-leg-no-vigente">Legislación no vigente</a>
+                              <a ui-sref="#/normativa/no_vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
                            </li>
                         </ul>
                      </li>
