--- a/app/index.html
+++ b/app/index.html
@@ -60,13 +60,17 @@
       <div ui-view=""></div>
       <footer id="footer">
          <div class="container">
-            <div class="row col-md-12">
-               <span class="col-md-5 col-xs-5">
-                  <a href="http://www.senado.gov.ar/" target="_blank"></a>
-               </span>
-               <span class="col-md-5 col-xs-5">
-                  <a  href="http://www.diputados.gov.ar/" target="_blank"></a>
-               </span>  
+            <div class="row">
+               <div class="col-md-6 col-xs-6">
+                  <a href="http://www.senado.gov.ar/" target="_blank">
+                     <img src="../images/honorable-senado-nacion.png" alt="Honorable Senado de la Nación Argentina"/>
+                  </a>
+               </div>
+               <div class="col-md-6 col-xs-6 align-right">
+                  <a href="http://www.diputados.gov.ar/" target="_blank">
+                     <img src="../images/honorable-camara-diputados.png" alt="Honorable Cámara de Diputados de la Nación Argentina"/>
+                  </a>
+               </div>  
             </div>
          </div>
       </footer>
