--- a/app/index.html
+++ b/app/index.html
@@ -31,15 +31,16 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" ui-sref="#/">Digesto Jurídico Argentino</a>
+                  <a class="navbar-brand" ng-href="#/">Digesto Jurídico Argentino</a>
+
                </div><!--/.navbar-header-->
                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
                      <li>
-                        <a ui-sref="#/ley">Ley 26.939</a>
+                        <a ng-href="#/ley">Ley 26.939</a>
                      </li>
                      <li>
-                        <a ui-sref="#/consultas">Consultar</a>
+                        <a ng-href="#/consultas">Consultar</a>
                      </li>
                      <li class="dropdown">
                         <a ui-sref="#/normativa" class="dropdown-toggle" data-toggle="dropdown">Buscar normas<span class="caret"></span></a>
