--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
    </head>
    <body ng-app="digestoApp">
    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">You are using an <Dstrong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
    <![endif]-->
 
    <!-- Add your site or application content here -->
@@ -48,10 +48,10 @@
                         <a ui-sref="#/normativa" title="Buscar normas" class="dropdown-toggle" data-toggle="dropdown">Buscar normas<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                            <li>
-                              <a iu-sref="#/normativa/vigente" title="Ir a Legislación vigente" id="icon-leg-vigente">Legislación vigente</a>
+                              <a ng-href="#/normativa/vigente" title="Ir a Legislación vigente" id="icon-leg-vigente">Legislación vigente</a>
                            </li>
                            <li>
-                              <a ui-sref="#/normativa/no_vigente" title="Ir a Legislación no vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
+                              <a ng-href="#/normativa/no_vigente" title="Ir a Legislación no vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
                            </li>
                         </ul>
                      </li>
