changes consultas / normativa

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,6 @@
                      <span class="icon-bar"></span>
                   </button>
                   <a class="navbar-brand" ng-href="#/">Digesto Jurídico Argentino</a>
-
                </div><!--/.navbar-header-->
                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
@@ -48,10 +47,10 @@
                         <a ui-sref="#/normativa" title="Buscar normas" class="dropdown-toggle" data-toggle="dropdown">Buscar normas<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                            <li>
-                              <a ng-href="#/normativa/vigente" title="Ir a Legislación vigente" id="icon-leg-vigente">Legislación vigente</a>
+                              <a ng-href="#/normativa" title="Ir a Legislación vigente" id="icon-leg-vigente">Legislación vigente</a>
                            </li>
                            <li>
-                              <a ng-href="#/normativa/no_vigente" title="Ir a Legislación no vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
+                              <a ng-href="#/normativa" title="Ir a Legislación no vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
                            </li>
                         </ul>
                      </li>
