--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,7 @@
       <script src="scripts/services/normativaService.js"></script>
       <script src="scripts/services/consultasService.js"></script>
       <script src="scripts/services/log.js"></script>
+      <script src="scripts/services/configuraciongeneral.js"></script>
       <!-- endbuild -->
 </body>
 </html>
