--- a/app/index.html
+++ b/app/index.html
@@ -118,7 +118,6 @@
    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
    <script src="bower_components/angular-animate/angular-animate.js"></script>
    <script src="bower_components/angular-touch/angular-touch.js"></script>
-   <script src="bower_components/angular-route/angular-route.js"></script>
    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
    <!-- endbower -->
    <!-- endbuild -->
@@ -132,10 +131,10 @@
       <script src="scripts/controllers/ley.js"></script>
       <script src="scripts/controllers/consultas.js"></script>
       <script src="scripts/controllers/normativa.js"></script>
-      <script src="scripts/services/normativaService.js"></script>
+      <script src="scripts/services/config.js"></script>
+      <script src="scripts/services/busqueda.js"></script>
       <script src="scripts/services/consultasService.js"></script>
-      <script src="scripts/services/log.js"></script>
-      <script src="scripts/services/configuraciongeneral.js"></script>
+      <script src="scripts/directives/ng-enter.js"></script>
       <!-- endbuild -->
 </body>
 </html>
