--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
       <script src="scripts/services/busqueda.js"></script>
       <script src="scripts/services/consultasService.js"></script>
       <script src="scripts/directives/ng-enter.js"></script>
+      <script src="scripts/directives/autocomplete.js"></script>
       <!-- endbuild -->
 </body>
 </html>
