--- a/app/index.html
+++ b/app/index.html
@@ -136,6 +136,7 @@
       <script src="scripts/services/consultasService.js"></script>
       <script src="scripts/directives/ng-enter.js"></script>
       <script src="scripts/directives/autocomplete.js"></script>
+      <script src="scripts/services/origendatos.js"></script>
       <!-- endbuild -->
 </body>
 </html>
