--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
                         <a ui-sref="#/normativa" title="Buscar normas" class="dropdown-toggle" data-toggle="dropdown">Buscar normas<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                            <li>
-                              <a ng-href="#/normativa" title="Ir a Legislación vigente" id="icon-leg-vigente">Legislación vigente</a>
+                              <a ng-href="#/normativa" title="Ir a Legislación del Digesto Jurídico Argentino" id="icon-leg-vigente">Legislacion del DJA</a>
                            </li>
                            <li>
                               <a ng-href="#/normativa" title="Ir a Legislación no vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
