--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
       <script src="scripts/directives/ng-enter.js"></script>
       <script src="scripts/directives/autocomplete.js"></script>
       <script src="scripts/services/origendatos.js"></script>
-      <script src="scripts/services/filtro.js"></script>
+      <script src="scripts/services/filters.js"></script>
       <!-- endbuild -->
 </body>
 </html>
