--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                   </button>
+                  <div></div>
                   <a class="navbar-brand" ng-href="#/">Digesto Jurídico Argentino</a>
                </div><!--/.navbar-header-->
                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -57,22 +58,22 @@
             </div>
          </nav>
       </header>
+
       <div ui-view=""></div>
+
       <footer id="footer">
          <div class="container">
-            <div class="row">
-               <div class="col-md-6 col-xs-6">
-                  <a href="http://www.senado.gov.ar/" title="Ir al sitio del Honorable Senado de la Nación Argentina" target="_blank">
-                     <img src="../images/honorable-senado-nacion.png" alt="Honorable Senado de la Nación Argentina"/>
-                  </a>
-               </div>
-               <div class="col-md-6 col-xs-6 align-right">
-                  <a href="http://www.diputados.gov.ar/" title="Ir al sitio del Honorable Cámara de Diputados de la Nación Argentina" target="_blank">
-                     <img src="../images/honorable-camara-diputados.png" alt="Honorable Cámara de Diputados de la Nación Argentina"/>
-                  </a>
-               </div>  
-            </div>
-         </div>
+            <div class="col-xs-6">
+               <a href="http://www.senado.gov.ar/" title="Ir al sitio del Honorable Senado de la Nación Argentina" target="_blank">
+                  <img src="../images/honorable-senado-nacion.png" alt="Honorable Senado de la Nación Argentina"/>
+               </a>
+            </div><!--/#logo-senado-->
+            <div class="col-xs-6 align-right">
+               <a href="http://www.diputados.gov.ar/" title="Ir al sitio del Honorable Cámara de Diputados de la Nación Argentina" target="_blank">
+                  <img src="../images/honorable-camara-diputados.png" alt="Honorable Cámara de Diputados de la Nación Argentina"/>
+               </a>
+            </div><!--/#logo-diputados-->  
+         </div><!--/.container-->
       </footer>
    </div>
 
