--- a/app/index.html
+++ b/app/index.html
@@ -151,6 +151,7 @@
          )
          new WOW().init();
       </script>
+      <script src="scripts/controllers/legislacion.js"></script>
       <!-- endbuild -->
 </body>
 </html>
