--- a/app/index.html
+++ b/app/index.html
@@ -40,19 +40,11 @@
                      <li>
                         <a ui-sref-active="active" ng-href="#/ley" title="Ir a Ley 26.939">Ley 26939</a>
                      </li>
-                     <li>
+                     <!--li>
                         <a ng-href="#/consultas" title="Consultar">Consultar</a>
-                     </li>
-                     <li class="dropdown">
-                        <a ui-sref="#/normativa" title="Buscar normas" class="dropdown-toggle" data-toggle="dropdown">Buscar normas<span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                           <li>
-                              <a ng-href="#/normativa" title="Ir a Legislación del Digesto Jurídico Argentino" id="icon-leg-vigente">Legislacion del DJA</a>
-                           </li>
-                           <li>
-                              <a ng-href="#/normativa" title="Ir a Legislación no vigente" id="icon-leg-no-vigente">Legislación no vigente</a>
-                           </li>
-                        </ul>
+                     </li-->
+                     <li>
+                        <a ng-href="#/buscar" title="Buscar normas">Buscar normas</a>
                      </li>
                   </ul>
                </div><!--/.navbar-collapse-->
